syntax = "proto3";

package afcon;

import "google/protobuf/timestamp.proto";

// Service definition for AFCON data
service AFCONService {
  // Get league information
  rpc GetLeague(LeagueRequest) returns (LeagueResponse);

  // Get all teams in the league
  rpc GetTeams(TeamsRequest) returns (TeamsResponse);

  // Get fixtures for the league
  rpc GetFixtures(FixturesRequest) returns (FixturesResponse);

  // Get today's upcoming fixtures (not started yet)
  rpc GetTodayUpcoming(TodayUpcomingRequest) returns (FixturesResponse);

  // Get fixture by ID
  rpc GetFixtureById(FixtureByIdRequest) returns (FixtureResponse);

  // Get fixture events by ID
  rpc GetFixtureEvents(FixtureEventsRequest) returns (FixtureEventsResponse);

  // Get fixtures by date
  rpc GetFixturesByDate(FixturesByDateRequest) returns (FixturesResponse);

  // Get live match updates (server streaming)
  rpc StreamLiveMatches(LiveMatchRequest) returns (stream LiveMatchUpdate);

  // Get standings
  rpc GetStandings(StandingsRequest) returns (StandingsResponse);

  // Get team details
  rpc GetTeamDetails(TeamDetailsRequest) returns (TeamDetailsResponse);

  // Get fixture lineups
  rpc GetLineups(LineupsRequest) returns (LineupsResponse);

  // Get next upcoming fixtures (all games on the next match day)
  rpc GetNextUpcoming(NextUpcomingRequest) returns (FixturesResponse);

  // Sync fixtures from API to database (admin operation)
  rpc SyncFixtures(SyncFixturesRequest) returns (SyncFixturesResponse);
}

// League Request/Response
message LeagueRequest {
  int32 league_id = 1;
  int32 season = 2;
}

message LeagueResponse {
  League league = 1;
  Country country = 2;
  repeated Season seasons = 3;
}

message League {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string logo = 4;
}

message Country {
  string name = 1;
  string code = 2;
  string flag = 3;
}

message Season {
  int32 year = 1;
  string start = 2;
  string end = 3;
  bool current = 4;
  Coverage coverage = 5;
}

message Coverage {
  FixtureCoverage fixtures = 1;
  bool standings = 2;
  bool players = 3;
  bool top_scorers = 4;
  bool top_assists = 5;
  bool top_cards = 6;
  bool injuries = 7;
  bool predictions = 8;
  bool odds = 9;
}

message FixtureCoverage {
  bool events = 1;
  bool lineups = 2;
  bool statistics_fixtures = 3;
  bool statistics_players = 4;
}

// Teams Request/Response
message TeamsRequest {
  int32 league_id = 1;
  int32 season = 2;
}

message TeamsResponse {
  repeated TeamInfo teams = 1;
}

message TeamInfo {
  Team team = 1;
  Venue venue = 2;
}

message Team {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string country = 4;
  int32 founded = 5;
  bool national = 6;
  string logo = 7;
}

message Venue {
  int32 id = 1;
  string name = 2;
  string address = 3;
  string city = 4;
  int32 capacity = 5;
  string surface = 6;
  string image = 7;
}

// Fixtures Request/Response
message FixturesRequest {
  int32 league_id = 1;
  int32 season = 2;
  string date = 3; // Optional: YYYY-MM-DD format
  int32 team_id = 4; // Optional: filter by team
  bool live = 5; // Optional: get only live matches
}

message FixturesResponse {
  repeated Fixture fixtures = 1;
}

// Today's Upcoming Fixtures Request
message TodayUpcomingRequest {
  int32 league_id = 1;
  int32 season = 2;
}

// Get Fixture By ID Request
message FixtureByIdRequest {
  int32 fixture_id = 1;
}

// Single Fixture Response
message FixtureResponse {
  Fixture fixture = 1;
}

// Get Fixture Events Request
message FixtureEventsRequest {
  int32 fixture_id = 1;
}

// Fixture Event (goal, card, substitution, etc.)
message FixtureEvent {
  EventTime time = 1;
  EventTeam team = 2;
  EventPlayer player = 3;
  EventPlayer assist = 4;
  string type = 5;     // "Goal", "Card", "subst", "Var"
  string detail = 6;   // "Normal Goal", "Yellow Card", etc.
  string comments = 7; // Optional comments
}

message EventTime {
  int32 elapsed = 1;
  int32 extra = 2;
}

message EventTeam {
  int32 id = 1;
  string name = 2;
  string logo = 3;
}

message EventPlayer {
  int32 id = 1;
  string name = 2;
}

// Fixture Events Response
message FixtureEventsResponse {
  repeated FixtureEvent events = 1;
}

// Get Fixtures By Date Request
message FixturesByDateRequest {
  string date = 1; // YYYY-MM-DD format
  int32 league_id = 2; // Optional: filter by league
  int32 season = 3; // Optional: required if league_id is set
}

// Get Next Upcoming Fixtures Request
message NextUpcomingRequest {
  int32 league_id = 1;
  int32 season = 2;
}

message Fixture {
  int32 id = 1;
  string referee = 2;
  string timezone = 3;
  google.protobuf.Timestamp date = 4;
  int32 timestamp = 5;
  FixturePeriods periods = 6;
  FixtureVenue venue = 7;
  FixtureStatus status = 8;
  FixtureTeams teams = 9;
  FixtureGoals goals = 10;
  FixtureScore score = 11;
}

message FixturePeriods {
  int32 first = 1;
  int32 second = 2;
}

message FixtureVenue {
  int32 id = 1;
  string name = 2;
  string city = 3;
}

message FixtureStatus {
  string long = 1;
  string short = 2;
  int32 elapsed = 3;
}

message FixtureTeams {
  FixtureTeam home = 1;
  FixtureTeam away = 2;
}

message FixtureTeam {
  int32 id = 1;
  string name = 2;
  string logo = 3;
  bool winner = 4;
}

message FixtureGoals {
  int32 home = 1;
  int32 away = 2;
}

message FixtureScore {
  ScoreDetail halftime = 1;
  ScoreDetail fulltime = 2;
  ScoreDetail extratime = 3;
  ScoreDetail penalty = 4;
}

message ScoreDetail {
  int32 home = 1;
  int32 away = 2;
}

// Live Match Streaming
message LiveMatchRequest {
  int32 league_id = 1;
  int32 season = 2;
}

message LiveMatchUpdate {
  int32 fixture_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string event_type = 3; // "goal", "card", "substitution", "status_update", "var"
  Fixture fixture = 4;
  FixtureEvent event = 5;
  FixtureStatus status = 6; // Materialized status for easy access
  repeated FixtureEvent recent_events = 7; // Recent events (last 5 minutes)
}

// Standings Request/Response
message StandingsRequest {
  int32 league_id = 1;
  int32 season = 2;
}

message StandingsResponse {
  repeated StandingGroup groups = 1;
}

message StandingGroup {
  string group_name = 1;
  repeated Standing standings = 2;
}

message Standing {
  int32 rank = 1;
  Team team = 2;
  int32 points = 3;
  int32 goals_diff = 4;
  string group = 5;
  string form = 6;
  string status = 7;
  string description = 8;
  StandingStats all = 9;
  StandingStats home = 10;
  StandingStats away = 11;
  google.protobuf.Timestamp update = 12;
}

message StandingStats {
  int32 played = 1;
  int32 win = 2;
  int32 draw = 3;
  int32 lose = 4;
  StandingGoals goals = 5;
}

message StandingGoals {
  int32 for = 1;
  int32 against = 2;
}

// Team Details Request/Response
message TeamDetailsRequest {
  int32 team_id = 1;
  int32 season = 2;
}

message TeamDetailsResponse {
  Team team = 1;
  Venue venue = 2;
  repeated Player players = 3;
}

message Player {
  int32 id = 1;
  string name = 2;
  string firstname = 3;
  string lastname = 4;
  int32 age = 5;
  Birth birth = 6;
  string nationality = 7;
  string height = 8;
  string weight = 9;
  bool injured = 10;
  string photo = 11;
}

message Birth {
  string date = 1;
  string place = 2;
  string country = 3;
}

// Lineups Request/Response
message LineupsRequest {
  int32 fixture_id = 1;
}

message LineupsResponse {
  repeated FixtureLineup lineups = 1;
}

message FixtureLineup {
  LineupTeam team = 1;
  LineupCoach coach = 2;
  string formation = 3;
  repeated LineupPlayerPosition start_xi = 4;
  repeated LineupPlayerPosition substitutes = 5;
}

message LineupTeam {
  int32 id = 1;
  string name = 2;
  string logo = 3;
  TeamColors colors = 4;
}

message TeamColors {
  ColorInfo player = 1;
  ColorInfo goalkeeper = 2;
}

message ColorInfo {
  string primary = 1;
  string number = 2;
  string border = 3;
}

message LineupCoach {
  int32 id = 1;
  string name = 2;
  string photo = 3;
}

message LineupPlayerPosition {
  LineupPlayer player = 1;
  string grid = 2;
}

message LineupPlayer {
  int32 id = 1;
  string name = 2;
  int32 number = 3;
  string pos = 4;
}

// Sync Fixtures Request/Response
message SyncFixturesRequest {
  int32 league_id = 1;
  int32 season = 2;
  string competition = 3; // e.g., "AFCON 2025"
}

message SyncFixturesResponse {
  bool success = 1;
  int32 fixtures_synced = 2;
  string message = 3;
}
